# emilio

./: .gitignore  AUTOEML.md  EML_COMPILER_REFERENCE.md  HANDOFF.md  README.md  autoeml_program.md  compare_logits.py  paper.tex  paper_conv_ane.tex  paper_gol_ane.tex
.github/: copilot-instructions.md
.github/agents/: ane-validator.agent.md  compiler.agent.md  doc-writer.agent.md  energy-bencher.agent.md  golden-validator.agent.md  historian.agent.md  optimality-gatekeeper.agent.md  tester.agent.md
demo/: demo_redact.sh  pii_examples.txt
docs/: INT4_SHARD_ANE_BUG.md  index.html  linkedin_ane.txt  tag-system.html  x_thread.txt  x_thread_ane.txt
emilio/conv-ane/: ANE_CHAIN_SCHEMA.md  ANE_SCALING_FINDINGS.md  ane_chain_probe.m  ane_class_dump.m  ane_inmemory_model_probe.m  ane_virtual_client_probe.m  build.sh  build_model.py  build_model.sh  compare_models.py  convert_qwen.py  energy_bench.sh  gemma_ane.swift  gguf_to_ane.py  gguf_to_coreml.py  gol_ane  main.swift  main_qwen.swift  make_gifs.py  pf_ane_smoke.swift  pf_ane_smoke_b128.swift  pf_ane_smoke_gather.swift  pf_ane_smoke_gather_real.swift  pf_ane_smoke_per_expert_full.swift  pf_ane_smoke_per_expert_probe.swift  pf_ane_smoke_per_expert_real.swift  pf_ane_smoke_topk4.swift  (+11 more)
eml_rust/: Cargo.toml  results.tsv
eml_rust/src/: autoeml_kernel.rs  autoeml_main.rs  autoeml_reference.rs  lib.rs
python/: bench.py  eml_core.py  eml_model.py  verify.py  verify_rust.py
scripts/: energy_probe.sh  gemma_swift_closedform_parity.sh  gemma_swift_decode_logit_gate.sh  gemma_swift_logit_gate.sh  pf_energy_probe.sh
(+183 files in other folders)
