[package]
name = "eml_rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "eml_rust_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "eml"
path = "src/main.rs"

[[bin]]
name = "emilio"
path = "src/emilio_main.rs"

[[bin]]
name = "autoeml"
path = "src/autoeml_main.rs"

[dependencies]
num-complex = "0.4"
rayon = "1.10"
egg = "0.9"
ordered-float = "4"

[dependencies.pyo3]
version = "0.23"
features = ["extension-module"]
optional = true

[dependencies.numpy]
version = "0.23"
optional = true

[features]
default = []
python = ["pyo3", "numpy"]
